--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "react-native-stopwatch-timer": "^0.0.21",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-web": "~0.19.10",
-    "react-navigation": "^5.0.0"
+    "react-navigation": "^5.0.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
