--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
@@ -35,13 +36,20 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-stopwatch-timer": "^0.0.21",
+    "react-native-svg": "^13.9.0",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-splash-screen": "~0.27.7",
+    "@expo/vector-icons": "^14.0.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "react-native-asset": "^2.1.1",
+    "react-native-svg-transformer": "^1.5.0"
   },
   "private": true
 }
