--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo/metro-runtime": "~3.2.3",
+    "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
@@ -22,6 +23,7 @@
     "expo": "~51.0.28",
     "expo-font": "~12.0.10",
     "expo-linear-gradient": "~13.0.2",
+    "expo-splash-screen": "~0.27.7",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.24",
     "react": "18.2.0",
@@ -40,9 +42,7 @@
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3",
-    "expo-splash-screen": "~0.27.7",
-    "@expo/vector-icons": "^14.0.3"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
