--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-paper": "^5.12.5",
+    "react-native-paper-dropdown": "^2.3.1",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
