--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-stopwatch-timer": "^0.0.21",
-    "react-native-svg": "15.8.0",
+    "react-native-svg": "^15.8.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "victory-native": "^41.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
