--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-collapsible": "^1.6.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
@@ -40,18 +41,18 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-stopwatch-timer": "^0.0.21",
-    "react-native-svg": "^15.8.0",
+    "react-native-svg": "^15.9.0",
     "react-native-toast-message": "^2.2.1",
     "react-native-ui-datepicker": "^2.0.4",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
     "typescript": "~5.3.3",
-    "victory-native": "^41.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@react-native-community/cli": "^15.1.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-native-asset": "^2.1.1",
     "react-native-svg-transformer": "^1.5.0"
