--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-navigation": "^5.0.0",
-    "typescript": "~5.3.3",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
