--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "e2e:build": "detox build --configuration android.device.debug",
+    "e2e:test": "detox test --configuration android.device.debug",
+    "e2e:test:single": "detox test --configuration android.device.debug -f",
+    "android:clean": "cd android && gradlew.bat clean"
   },
   "dependencies": {
     "@expo-google-fonts/roboto": "^0.2.3",
@@ -53,6 +57,7 @@
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@react-native-community/cli": "^15.1.2",
+    "detox": "^20.28.0",
     "metro-react-native-babel-preset": "^0.77.0",
     "react-native-asset": "^2.1.1",
     "react-native-svg-transformer": "^1.5.0"
