Ajuste dos modais e outras configurações de deploy

--- a/app.json
+++ b/app.json
@@ -18,13 +18,25 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.jonatan852.sistemadepagamentosfrontend"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "9a4f36e3-9b92-4909-a377-8831bb7ecb3b"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/9a4f36e3-9b92-4909-a377-8831bb7ecb3b"
+    }
   }
 }
